feat: setup for chglog

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,21 +10,21 @@ jobs:
       - name: "Check-out"
         uses: actions/checkout@v2
       - name: "Generate Github changelog"
-        uses: heinrichreimer/github-changelog-generator-action@v2.3
+        uses: actions/install-git-chglog@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          output: CHANGELOG-G.md
+          version: 0.15.4
+        run: git-chglog -o CHANGELOG.md --next-tag 2.0.0
       - name: "Print Github changelog to console"
         run: cat CHANGELOG-G.md
       - name: "Generate Jira changelog"
         uses: ./
         with:
-          host: 'authme01.atlassian.net'
-          userName: 'lutas.lin@authme.com'
+          host: "authme01.atlassian.net"
+          userName: "lutas.lin@authme.com"
           password: ${{ secrets.JIRA_TOKEN }}
-          projectKey: 'PROD'
-          path: 'CHANGELOG-G.md'
-          output: 'CHANGELOG.md'
+          projectKey: "PROD"
+          path: "CHANGELOG-G.md"
+          output: "CHANGELOG.md"
       - name: "Print Jira changelog to console"
         run: cat CHANGELOG.md
       - name: "Upload changelog"
