fix: fix filename

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           version: "v0.15.4"
       - name: "Generate Github changelog"
-        run: git-chglog -o CHANGELOG.md --next-tag 2.0.0
+        run: git-chglog -o CHANGELOG-G.md --next-tag 2.0.0
       - name: "Print Github changelog to console"
         run: cat CHANGELOG-G.md
       - name: "Generate Jira changelog"
