--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: "Check-out"
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: "Install git-chglog"
         uses: craicoverflow/install-git-chglog@v1.0.0
         with:
